Created SlidePane, FileTree, and Editor

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,7 @@
 [WINDOW]
-iWIDTH = 640
-iHEIGHT = 480
+iWIDTH = 800
+iHEIGHT = 600
+
+[SYSTEM]
+sDIRECTORY = C:\\Documents and Settings\\Zachary Knoblauch\\My Documents\\Notes
 
