--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,28 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 version = '1.0'
 jar {
     manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart',
-                   'Implementation-Version': version
+        attributes 'Implementation-Title': 'NoteViewer',
+                   'Implementation-Version': version,
+                   'Main-Class': 'io.captainsly.noteviewer.NoteViewer'
     }
 }
 
 repositories {
         mavenCentral()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
-        
-    }
+}
 
 dependencies {
     compile "org.apache.commons:commons-lang3:3.4"
     compile "org.ini4j:ini4j:0.5.1"
+    compile "org.controlsfx:controlsfx:8.40.10"
+ 
 }
 
-test {
-    systemProperties 'property': 'value'
-}
 
 uploadArchives {
     repositories {
